--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,10 @@
             <version>6.8.7</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.minidev</groupId>
+            <artifactId>json-smart</artifactId>
+        </dependency>
     </dependencies>
 
 	<build>
