--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>basic.knowledge</groupId>
-	<artifactId>stephen</artifactId>
+	<artifactId>henry</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>stephen</name>
+	<name>henry</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
